# SimpleAmqpClient

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake.in  variables.cmake
include/SimpleAmqpClient/: AmqpLibraryException.h  BasicMessage.h  Bytes.h  Channel.h  ChannelImpl.h  TableImpl.h
source/: AmqpException.cpp  AmqpLibraryException.cpp  AmqpResponseLibraryException.cpp  BasicMessage.cpp  Channel.cpp  ChannelImpl.cpp  TableImpl.cpp
test/: CMakeLists.txt
test/source/: test_message.cpp
